--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="science">science</string>
     <string name="feelings">feelings</string>
     <string name="education">education</string>
+
+    <string name="doneButton">done</string>
 </resources>
